--- a/app/v1_21-12-2020.ipynb
+++ b/app/v1_21-12-2020.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary = pd.read_csv('dictionary.csv', names = ['hiszpanski', 'polski'], sep = ' ; ', encoding = 'utf-8', engine = 'python')\n",
+    "dictionary = pd.read_csv('../vocabulary.csv', names = ['hiszpanski', 'polski'], sep = ' ; ', encoding = 'utf-8', engine = 'python')\n",
     "df = pd.DataFrame(dictionary)"
    ]
   },
